--- a/public/index.html
+++ b/public/index.html
@@ -3,33 +3,31 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="canonical" href="https://www.wrappixel.com/templates/xtreme-admin-lite/" />
+  <!-- <link rel="canonical" href="https://www.wrappixel.com/templates/xtreme-admin-lite/" /> -->
+  
 
-  <link rel="icon" type="image/png" sizes="16x16" href="./assets/assets/images/favicon.png">
-  <link href="./assets/assets/libs/chartist/dist/chartist.min.css" rel="stylesheet">
-  <link href="./assets/dist/css/style.min.css" rel="stylesheet">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://m.media-amazon.com/images/I/61NN9SlsuuL._SX522_.jpg" />
+  <link href="./assets/assets/libs/chartist/dist/chartist.min.css" rel="stylesheet" />
+  <link href="./assets/dist/css/style.min.css" rel="stylesheet" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-  <link rel="stylesheet" href="./assets/css/login.css">
-  <link rel="stylesheet" href="./assets/css/profile.css">
-  <link rel="stylesheet" href="./assets/css/accordion.css">
-  <link rel="stylesheet" href="./assets/css/index.css">
-  <link rel="stylesheet" href="./assets/css/modal.css">
+  <link rel="stylesheet" href="./assets/css/login.css" />
+  <link rel="stylesheet" href="./assets/css/profile.css" />
+  <link rel="stylesheet" href="./assets/css/accordion.css" />
+  <link rel="stylesheet" href="./assets/css/index.css" />
+  <link rel="stylesheet" href="./assets/css/modal.css" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-  <title>React App</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <script src="./assets/javascript/dom_login.js"></script>
 </body>
 
+<!-- <script src="./assets/javascript/dom_login.js"></script> -->
 <!-- j Query -->
 <script type="text/javascript" src="./assets/vendor/jquery.2.2.3.min.js"></script>
 <!-- Bootstrap JS -->
